# text_dedup_rs

./: .gitignore  Cargo.toml  GPU_SETUP.md  NOTICE  README.md  dedup_toolkit.py  pyproject.toml  requirements.txt
.cargo/: config.toml
src/: cdc.rs  lib.rs  simhash.rs  utils.rs
