[package]
name = "dedup_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dedup_rust_core"
crate-type = ["cdylib"] # Compiles to a dynamic library for Python

[dependencies]
# Python bindings
pyo3 = { version = "0.21.2", features = ["extension-module"] }

# Parallelism
rayon = "1.10.0"

# High-performance hashing
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }

# High-performance hash map/set, same as in Rust's std lib
hashbrown = "0.14.5"

# Union-Find data structure
petgraph = "0.6.5"

# Logging for diagnostics
log = "0.4.21"
env_logger = "0.11.3"

# Faiss bindings - conditional on GPU feature
faiss = { version = "0.12.1", optional = true }

[features]
default = []
gpu = ["faiss"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true